<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 Daniel Medina <http://danielme.com>
 * 
 * This file is part of "Android WebView Demo".
 * 
 * "Android WebView Demo" is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * "Android WebView Demo" is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License version 3
 * along with this program.  If not, see <http://www.gnu.org/licenses/gpl-3.0.html/>
 */
 -->
<resources>

    <string name="app_name">WebView Demo</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="stop">Stop</string>
    <string name="history">History</string>
    <string name="go">Go</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="question">Do you want to save this file?</string>
    <string name="result">File saved: </string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="stopping">stopping</string>
    <string name="favicon">favicon</string>
    <string name="noconnection">Internet connection not available</string>
	<string name="error">Error</string>  
    <string name="nosd">Storage not available</string>  	

</resources>